udated web archive

--- a/index.html
+++ b/index.html
@@ -52,33 +52,32 @@
                         Moreno is
                         a
                         <span
-                              id="isWhat">happy young designer...</span>
+                              id="isWhat"> web designer...</span>
                     </h1>
                 </div>
 
                 <!------------ MORE INFO ------------>
 
-                <div id="infoText" class="max-w-xl text-lg pb-[80px]">
+                <div id="infoText" class="max-w-xl text-lg">
                     <div class="relative">
 
-                        <p class="mb-2">...who's creative in all
-                            ways. I really enjoy making and designing websites for people, for things or for fun. I was
-                            raised in Spain, moved to France for studying arts and I'm wainting to
-                            relocate in Rotterdam next september!
-                        </p>
-
-                        <p class="my-2">You can
+                        <p class="mb-2">... creative in all
+                            ways. I really enjoy making and designing websites for people, for events or for fun. I
+                            always try to learn new things and tools making them. Finishing my styudies in France, I'm
+                            wainting to
+                            relocate in Rotterdam next september! You can
                             <a id="seeMore"
                                class="text-[green]">read
                                 more</a> if <span id="noCurious">you are curious :)</span>
                         </p>
+
                     </div>
 
                     <div id="moreInfo"
                          class="hidden opacity-0 transition-all"
                          data-state="close">
-                        <span class="mt-2 font-bold">Daily life</span>
-                        <p class="mb-2">I live in <a
+                        <span class="mt-2 font-bold" id="life">Life</span>
+                        <p class="mb-2">Actually I'm living in <a
                                href="https://maps.app.goo.gl/6ntymCLiUkz1Bkdo6"
                                class="" target="_blank">Amiens</a>, where I'm
                             finishing my double
@@ -86,7 +85,7 @@
                                href="https://esad-amiens.design/fr/design-numerique/dnsep"
                                class="" target="_blank">ÉSAD</a> and the <a
                                href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/"
-                               class="" target="_blank">UTC</a>. I also do a
+                               class="" target="_blank">UTC</a>. I do a
                             student job welcoming people at the <a href="https://maps.app.goo.gl/6nhrgyCSwHABf6jk9"
                                class="" target="_blank">Maison de la Culture
                                 d'Amiens</a> who's a big cultural place in the city. On the weekends I spend some
@@ -97,7 +96,7 @@
                         <p class="mb-2">
                             My projects have taken me to learn HTML, CSS,
                             Javascript, Kirby and Indexhibit CMS, Stripe, VSCodium,
-                            Figma, Blender, and the Abode suite... you can see all these things at <a
+                            Figma, Blender... you can see all these things at <a
                                class="" target="_blank"
                                href='https://pablo.energy/digital-stuff'>my
                                 digital stuff</a>. I recently made a video-tutorial
@@ -112,11 +111,10 @@
                                href='https://www.samdroual.fr/'>Sam</a> or
                             <a class="" target="_blank"
                                href='https://www.leo.doctor/'>Léo</a>, or far
-                            from me, like <a class=""
-                               target="_blank" href='https://collaborative-narratives.online/'>Tim</a> or <a
+                            from me like <a
                                class=""
-                               target="_blank" href='https://www.instagram.com/angieblingmaker'>Angèle</a> (for whom I'm
-                            making a portfolio/shop website). I also
+                               target="_blank" href='https://www.instagram.com/angieblingmaker'>Angèle</a>, for whom I'm
+                            making a portfolio/shop website. I also
                             made
                             friends in
                             Rotterdam at
@@ -131,12 +129,6 @@
                         </p>
                         <span class="mt-2 font-bold">Some projects</span>
                         <ul>
-                            <li>
-                                <img src="assets/icons/moreno.png" alt="" class="w-[15px] inline mr-1"> Un día como
-                                hoy... ·
-                                <span
-                                      class="opacity-30">Family photo anniversaries</span>
-                            </li>
                             <li><img src="assets/icons/memoire.png" alt="" class="w-[15px] inline mr-1"><a
                                    class="cursor-pointer hover:underline"
                                    href="https://thewebwewant.online" target="_blank">The Web We Want</a> ·
@@ -150,7 +142,18 @@
                                    href="https://a-map-of-inter.net" target="_blank">A map of Internet</a> · <span
                                       class="opacity-30">A way to discover my favorties websites</span>
                             </li>
+                            <li><img src="assets/icons/collaborative.png" alt="" class="w-[15px] inline mr-1"><a
+                                   class="cursor-pointer hover:underline"
+                                   href="https://collaborative-narratives.online/" target="_blank">Collaborative
+                                    Narratives</a> · <span
+                                      class="opacity-30">Image waterfall of Tim's graduation project</span>
+                            </li>
                         </ul>
+
+                        <p class="mt-8 text-base">Over the years this website was updated reflecting my mood. There
+                            is this <a
+                               href="web-archive/index.html" class="">web archive</a> to see this evolution.
+                        </p>
                     </div>
                 </div>
 
@@ -173,18 +176,6 @@
                        target="_blank">Are.na</a>
                 </div>
 
-                <select
-                        class="px-2 py-1 rounded-md cursor-pointer w-[50px] bg-black bg-opacity-10 hover:bg-opacity-100 hover:no-underline transition-all duration-300 hover:text-white hidden md:block archive-selector">
-                    <option data-url="index.html" selected="">v.9</option>
-                    <option data-url="web-archive/v8-under-plus/frame.html">v.8 (under+)</option>
-                    <option data-url="web-archive/v7-under/frame.html">v.7 (under)</option>
-                    <option data-url="web-archive/v6-23/frame.html">v.6 (23%)</option>
-                    <option data-url="web-archive/v5-threecolors/frame.html">v.5 (threecolors)</option>
-                    <option data-url="web-archive/v4-dark/frame.html">v.4 (dark)</option>
-                    <option data-url="web-archive/v3-sidelist/frame.html">v.3 (sidelist)</option>
-                    <option data-url="web-archive/v2-billboard2/frame.html">v.2 (billboard2)</option>
-                    <option data-url="web-archive/v1-billboard/frame.html">v.1 (billboard)</option>
-                </select>
             </div>
 
         </div>
@@ -204,14 +195,14 @@
             </div>
 
             <video id="videoWaiting" playsinline autoplay muted controls loop
-                   class="object-cover absolute z-20 w-full h-full rounded-xl transition-all duration-500"
+                   class="object-cover absolute z-20 w-full h-full rounded-xl transition-all duration-500 md:rounded-none"
                    poster="media/videos/poster.jpg">
                 <source type="video/webm" src="media/videos/waiting.webm" />
                 <source type="video/mp4" src="media/videos/waiting.mp4" />
             </video>
 
             <video id="videoPresenting" playsinline
-                   class="object-cover absolute z-10 w-full h-full transition-opacity duration-[.8s] rounded-xl">
+                   class="object-cover absolute z-10 w-full h-full transition-opacity duration-[.8s] rounded-xl md:rounded-none">
                 <source type="video/webm" src="media/videos/presenting.webm" />
                 <source type="video/mp4" src="media/videos/presenting.mp4" />
             </video>
@@ -228,7 +219,6 @@
 
     <!-- <script src="assets/js/import.js"></script> -->
     <script src="assets/js/script.js"></script>
-    <script src="/web-archive/assets/web-archive.js"></script>
 
 
 </body>
