--- a/sunday-sites/travels/index.html
+++ b/sunday-sites/travels/index.html
@@ -46,6 +46,7 @@
             <h4>August 22</h4>
             <div class="cities">
                 <div class="city" id="Pirineos"><span>Pirineos</span></div>
+                <div class="city" id="Bedousse"><span>Bedousse</span></div>
                 <div class="city" id="SaintRobert"><span>Saint-Robert</span></div>
             </div>
         </div>
@@ -53,7 +54,6 @@
         <div class="block">
             <h4>Septembre 22</h4>
             <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
             </div>
         </div>
         <div class="block">
@@ -127,7 +127,6 @@
         <div class="block">
             <h4>June 23</h4>
             <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
             </div>
         </div>
 
@@ -150,7 +149,6 @@
                 <div class="city" id="Socoa"><span>Socoa</span></div>
                 <div class="city" id="Bilbao"><span>Bilbao</span></div>
                 <div class="city" id="Genève"><span>Genève</span></div>
-                <div class="city" id="Amiens"><span>Amiens</span></div>
             </div>
         </div>
 
@@ -158,23 +156,21 @@
         <div class="block">
             <h4>Septembre 23</h4>
             <div class="cities">
-                <div class="city" id="Rotterdam"><span>Rotterdam</span></div>
-                <div class="city" id="Briançon"><span>Briançon</span></div>
                 <div class="city" id="Paris"><span>Paris</span></div>
+                <div class="city" id="Rotterdam"><span>Rotterdam</span></div>
             </div>
         </div>
 
         <div class="block">
             <h4>October 23</h4>
             <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
+                <div class="city" id="Briançon"><span>Briançon</span></div>
             </div>
         </div>
 
         <div class="block">
             <h4>November 23</h4>
             <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
                 <div class="city" id="Paris"><span>Paris</span></div>
                 <div class="city" id="Gaillon"><span>Gaillon</span></div>
             </div>
@@ -183,7 +179,6 @@
         <div class="block">
             <h4>December 23</h4>
             <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
                 <div class="city" id="Bilbao"><span>Bilbao</span></div>
                 <div class="city" id="Paris"><span>Paris</span></div>
                 <div class="city" id="Bilbao"><span>Bilbao</span></div>
@@ -193,14 +188,12 @@
         <div class="block">
             <h4>January 24</h4>
             <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
             </div>
         </div>
 
         <div class="block">
             <h4>February 24</h4>
             <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
                 <div class="city" id="Strasbourg"><span>Strasbourg</span></div>
                 <div class="city" id="Paris"><span>Paris</span></div>
                 <div class="city" id="Bilbao"><span>Bilbao</span></div>
@@ -210,15 +203,24 @@
         <div class="block">
             <h4>March 24</h4>
             <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
                 <div class="city" id="Cambrai"><span>Cambrai</span></div>
+            </div>
+        </div>
+
+        <div class="block">
+            <h4>April 24</h4>
+            <div class="cities">
+                <div class="city" id="Nantes"><span>Nantes</span></div>
+                <div class="city" id="Rouen"><span>Rouen</span></div>
+                <div class="city" id="Val-de-Saâne"><span>Val-de-Saâne</span></div>
+                <div class="city" id="Paris"><span>Paris</span></div>
             </div>
         </div>
 
 
     </div>
 
-
+    <!-- 
     <div class="index">
         <div class="city" id="Amiens"><span>Amiens</span></div>
         <div class="city" id="Amsterdam"><span>Amsterdam</span></div>
@@ -238,14 +240,15 @@
         <div class="city" id="Cévennes"><span>Cévennes</span></div>
         <div class="city" id="Briançon"><span>Briançon</span></div>
         <div class="city" id="Gaillon"><span>Gaillon</span></div>
-    </div>
+        <div class="city" id="Nantes"><span>Nantes</span></div>
+    </div> -->
 
     <div class="firm">
 
-        <img src="assets/image.png" alt="" style="width: 200px;border-radius: 8px;border: 2px solid white;">
-        <div><a href="https://sundaysites.cafe/">SundaySites</a> made on a October 22nd of 2023 with my friend <a
+        <img src="assets/image.png" alt="" style="width: 200px;border-radius: 8px;">
+        <div><a href="https://sundaysites.cafe/">SundaySite</a> made on a 22nd of October 2023 with my friend <a
                href="https://samdroual.fr">Sam</a> in <div class="city" id="Amiens"
-                 style="width: fit-content; display: inline;"><span>Amiens</span></div>.
+                 style="width: fit-content; display: inline;"><span>Amiens</span></div>
         </div>
 
     </div>
