--- a/web-archive/index.html
+++ b/web-archive/index.html
@@ -39,6 +39,8 @@
             width: 100%;
             height: 100%;
             background-color: white;
+            border: 1px solid white;
+            border-radius: 4px;
         }
     </style>
 </head>
